--- a/Castaway - Figma/style/styles.css
+++ b/Castaway - Figma/style/styles.css
@@ -1,260 +1,266 @@
- * {
-     box-sizing: border-box;
- }
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
- body {
-     font-family: Arial, sans-serif;
-     text-align: center;
-     margin: 0;
-     padding: 0;
- }
+* {
+    box-sizing: border-box;
+}
 
- header {
-     display: flex;
-     background-color: #191919;
-     color: #fff;
-     height: 119px;
-     padding: 20px;
- }
+body {
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
 
- h1 {
-     color: #FFFFFF;
-     margin-top: 37px;
-     margin-left: 30px;
- }
+header {
+    display: flex;
+    background-color: #191919;
+    color: #fff;
+    height: 119px;
+    padding: 20px;
+}
 
- .ul_1 {
-     display: flex;
-     margin-left: 800px;
-     margin-top: 48px;
-     list-style: none;
-     gap: 45px;
- }
+h1 {
+    color: #FFFFFF;
+    margin-top: 37px;
+    margin-left: 30px;
+}
 
- .ul_1 li a {
-     text-decoration: none;
-     color: #FFFFFF;
- }
+.ul_1 {
+    display: flex;
+    margin-left: 800px;
+    margin-top: 48px;
+    list-style: none;
+    gap: 45px;
+}
 
- .ul_1 .li_1 a {
-     color: #118DA8;
- }
+.ul_1 li a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
 
- main {
-     height: 5990px;
-     padding: 20px;
-     background-color: #191919;
- }
+.ul_1 .li_1 a {
+    color: #118DA8;
+}
 
- .small_piece {
-     display: flex;
-     align-items: center;
- }
+main {
+    height: 5990px;
+    padding: 20px;
+    background-color: #191919;
+}
 
- .small_piece h1 {
-     font-size: 50px;
-     font-weight: 100;
- }
+.small_piece {
+    display: flex;
+    align-items: center;
+}
 
- .small_piece button {
-     background-color: #118DA8;
-     color: #FFFFFF;
-     border: none;
-     margin-left: 800px;
-     font-size: 20px;
-     height: 60px;
-     border-radius: 10px;
-     font-weight: 100;
- }
+.small_piece h1 {
+    font-size: 45px;
+    font-weight: 100;
+}
 
- .wrapper2 {
-     height: 2088px;
-     width: 100%;
- }
+.small_piece button {
+    background-color: #118DA8;
+    color: #FFFFFF;
+    border: none;
+    margin-left: 800px;
+    font-size: 20px;
+    height: 60px;
+    border-radius: 5px;
+    font-weight: 100;
+}
 
- .wrapper2>h1 {
-     font-family: Arial, Helvetica, sans-serif;
-     font-weight: 400;
-     margin-top: 100px;
-     font-size: 64px;
-     margin-left: 70px;
-     color: #Fff;
-     justify-content: center;
- }
+.wrapper2 {
+    height: 2088px;
+    width: 100%;
+}
 
- .wrapper2>button {
-     font-size: 17px;
-     width: 178px;
-     height: 51px;
-     background-color: aqua;
-     margin-left: 1180px;
-     border-radius: 10px;
- }
+.wrapper2>h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    margin-top: 100px;
+    font-size: 64px;
+    margin-left: 70px;
+    color: #Fff;
+    justify-content: center;
+}
 
- .wrapper2>button:hover {
-     background-color: #ffffff;
-     color: #43a046;
-     transition: 0.1s ease;
- }
+.wrapper2>button {
+    font-size: 17px;
+    width: 178px;
+    height: 51px;
+    background-color: aqua;
+    border-radius: 10px;
+}
 
- .card {
-     font-family: Arial, Helvetica, sans-serif;
-     width: 1300px;
-     height: 545px;
-     border-radius: 32px;
-     margin-left: 60px;
-     margin-top: 100px;
-     background-color: #000000;
-     display: flex;
- }
+.wrapper2>button:hover {
+    background-color: #ffffff;
+    color: #43a046;
+    transition: 0.1s ease;
+}
 
- /* .card:hover {
+.card {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 1300px;
+    height: 545px;
+    border-radius: 32px;
+    margin-left: 60px;
+    margin-top: 100px;
+    background-color: #000000;
+    display: flex;
+}
+
+/* .card:hover {
     transition: 0.8s ease-in-out;
     transform: scale(1.06);
 } */
 
- .card>img {
-     width: 389px;
-     height: 465px;
-     padding-left: 40px;
-     padding-top: 40px;
- }
+.card>img {
+    width: 389px;
+    height: 465px;
+    padding-left: 40px;
+    padding-top: 40px;
+}
 
- .card-text {
-     width: 389px;
-     height: 465px;
-     padding-left: 40px;
-     padding-top: 18px;
- }
+.card-text {
+    width: 389px;
+    height: 465px;
+    padding-left: 40px;
+    padding-top: 18px;
+}
 
- .card-text>h6 {
-     text-align: center;
-     color: rgb(247, 247, 247);
-     background-color: #191919;
-     width: 74px;
-     height: 27px;
- }
+.card-text>h6 {
+    display: flex;
+    justify-content: center;
+    color: rgb(247, 247, 247);
+    background-color: #191919;
+    width: 74px;
+    height: 27px;
+    padding-top: 6px;
+    font-size: 12px;
+}
 
- .card-text>h5 {
-     color: aquamarine;
- }
+.card-text>h5 {
+    color: aquamarine;
+    margin-left: -280px;
+}
 
- .card-text>h3 {
-     color: #fff;
-     font-size: 40px;
-     font-weight: 800px;
- }
+.card-text>h3 {
+    color: #fff;
+    font-size: 40px;
+    font-weight: 800px;
+}
 
- .card-text p {
-     width: 900px;
-     font-size: 20px;
-     color: #fff;
-     font-weight: 900px;
- }
+.card-text p {
+    width: 700px;
+    font-size: 20px;
+    color: #fff;
+    font-weight: 900px;
+}
 
- .card-text>button {
-     color: #fff;
-     font-size: 14px;
-     width: 178px;
-     height: 51px;
-     background-color: aqua;
-     border-radius: 5px;
- }
+.card-text>button {
+    color: #fff;
+    font-size: 14px;
+    width: 178px;
+    height: 51px;
+    background-color: aqua;
+    border-radius: 5px;
+    margin-left: -150px;
+}
 
- .card-text>button:hover {
-     background-color: #ffffff;
-     color: #43a046;
-     transition: 0.1s ease;
- }
+.card-text>button:hover {
+    background-color: #ffffff;
+    color: #43a046;
+    transition: 0.1s ease;
+}
 
- .submit-log {
-     height: 943px;
-     width: 100%;
- }
+.submit-log {
+    height: 943px;
+    width: 100%;
+}
 
- .submit {
-     margin-top: 100px;
-     margin-left: 60px;
-     width: 1300px;
-     height: 387px;
-     border-radius: 32px;
-     background-color: #000000;
- }
+.submit {
+    margin-top: 100px;
+    margin-left: 60px;
+    width: 1300px;
+    height: 387px;
+    border-radius: 32px;
+    background-color: #000000;
+}
 
- /* .submit:hover {
+/* .submit:hover {
     transition: 0.8s ease-in-out;
     transform: scale(1.06);
 } */
 
- .wrapper3 {
-     display: flex;
- }
+.wrapper3 {
+    display: flex;
+}
 
- .wrapper3-texts {
-     font-family: Arial, Helvetica, sans-serif;
-     height: 448px;
-     width: 590px;
-     margin-top: 300px;
-     margin-left: 60px;
- }
+.wrapper3-texts {
+    font-family: Arial, Helvetica, sans-serif;
+    height: 448px;
+    width: 590px;
+    margin-top: 300px;
+    margin-left: 60px;
+}
 
- .wrapper3>img {
-     height: 743px;
-     width: 650px;
-     margin-top: 150px;
-     margin-left: 100px;
- }
+.wrapper3>img {
+    height: 743px;
+    width: 650px;
+    margin-top: 150px;
+    margin-left: 100px;
+}
 
- .wrapper3>.iconn:hover {
-     transition: 0.1s ease-in-out;
-     transform: scale(1.06);
- }
+.wrapper3>.iconn:hover {
+    transition: 0.1s ease-in-out;
+    transform: scale(1.06);
+}
 
- .wrapper3-texts>h4 {
-     color: aquamarine;
- }
+.wrapper3-texts>h4 {
+    color: aquamarine;
+}
 
- .wrapper3-texts>h1 {
-     font-size: 50px;
-     color: #fff;
- }
+.wrapper3-texts>h1 {
+    font-size: 50px;
+    color: #fff;
+}
 
- .wrapper3-texts>.p1 {
-     color: rgb(191, 191, 191);
-     font-size: 25px;
- }
+.wrapper3-texts>.p1 {
+    color: rgb(191, 191, 191);
+    font-size: 25px;
+}
 
- .wrapper3-texts>.p2 {
-     font-size: 25px;
-     color: rgb(191, 191, 191);
- }
+.wrapper3-texts>.p2 {
+    font-size: 25px;
+    color: rgb(191, 191, 191);
+}
 
- .submit-texts>h5 {
-     color: aquamarine;
-     z-index: 100px;
-     margin-left: 100px;
- }
+.submit-texts>h5 {
+    color: aquamarine;
+    z-index: 100px;
+    margin-left: 100px;
+}
 
- .submit-texts>h1 {
-     color: #fff;
- }
+.submit-texts>h1 {
+    color: #fff;
+}
 
- .cards {
-     width: 100%;
-     height: 901px;
- }
+.cards {
+    width: 100%;
+    height: 901px;
+}
 
- .cards>.cardd {
-     display: flex;
-     width: 423px;
-     height: 321px;
-     border-radius: 32px;
-     background-color: #000000;
- }
+.cards>.cardd {
+    display: flex;
+    width: 423px;
+    height: 321px;
+    border-radius: 32px;
+    background-color: #000000;
+}
 
- footer {
-     background-color: #191919;
-     color: #fff;
-     height: 438px;
-     top: 5552px;
- }
+footer {
+    background-color: #191919;
+    color: #fff;
+    height: 438px;
+    top: 5552px;
+}
